Bug 1487312 - Fix content insertion accessibility notifications in Shadow DOM. r=Jamie,surkov

The issue was specific to content insertion directly under a shadow root, the
rest should work (see bug 1427825 for the fix for other similar occurrences).

The removal of the aContainer argument follows the same pattern as bug 1442207.

Differential Revision: https://phabricator.services.mozilla.com/D6431